--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,12 @@ ul>li{
     padding-bottom: 10px;
 }
 
-.home1{
+.nav-item{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.home1>a{
     color: #f1a600;
 }
 
