--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ input#menu-hamburguesa~ul{
 input#menu-hamburguesa:checked ~ ul{
     right: 0;
     z-index: 9;
+    padding: 2rem;
 }
 
 ul>li{
@@ -561,7 +562,7 @@ footer img{
     }
     
     .secSecond{
-        padding-left: 10rem;
+        padding-left: 11rem;
         padding-top: 1rem;
     }
     
